<resources>
    <string name="app_name">Ki4a</string>
    <string name="str_config">Status</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_compress">Enable Compression</string>

    <string name="pref_title_proxy">Enable HTTP Proxy</string>

    <string name="pref_title_cellular">Cellular data mode</string>
    <string name="pref_summary_cellular">Auto turn off WiFi on connect and use cellular network status for reconnects</string>
    <string name="pref_title_auto_reconnect">Auto Reconnect</string>
    <string name="pref_title_notifications">Display notifications</string>

    <string name="pref_title_airplane">Airplane mode toggle</string>
    <string name="pref_summary_airplane">Switch Airplane mode On/Off to reconnect cellular network (Root required!)</string>

    <string name="pref_title_iptables">Use iptables instead of VPN</string>
    <string name="pref_summary_iptables">Root required!</string>

    <string name="pref_title_ssh_section">SSH Server</string>

    <string name="pref_title_ssh_server">Address</string>
    <string name="pref_default_ssh_server"></string>

    <string name="pref_title_ssh_port">Port (default: 22)</string>
    <string name="pref_default_ssh_port">22</string>

    <string name="pref_title_ssh_username">Username</string>
    <string name="pref_default_ssh_username"></string>

    <string name="pref_title_ssh_password">Password</string>
    <string name="pref_default_ssh_password"></string>

    <string name="pref_title_ask_pass">Ask for password when connecting</string>
    <string name="pref_summary_ask_pass"></string>

    <string name="pref_title_ssh_key">Private Key</string>
    <string name="pref_default_ssh_key"></string>
    <string name="pref_summary_ssh_key">OpenSSH format</string>

    <string name="pref_title_key">Use Private Key</string>
    <string name="pref_summary_key">Instead of password</string>

    <string name="pref_title_proxy_section">HTTP Proxy</string>

    <string name="pref_title_proxy_host">Address</string>
    <string name="pref_default_proxy_host"></string>

    <string name="pref_title_proxy_port">Port (default: 80)</string>
    <string name="pref_default_proxy_port">80</string>

    <string name="pref_title_proxy_header">Http Headers</string>
    <string name="pref_default_proxy_header"></string>
    <string name="pref_summary_proxy_header">Headers are sent to proxy after CONNECT and before SSH handshake</string>

    <string name="text_status_initializing">Initializing...</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status_disconnected">Disconnected</string>
    <string name="text_status_reconnecting">Reconnecting...</string>
    <string name="text_status_connecting">Connecting...</string>
    <string name="text_status_empty" />

    <string name="not_root_access">Could not get root access</string>
    <string name="pref_title_other_section">Other options</string>

    <string name="pref_about">About</string>
    <string name="application_log">Application Log</string>
    <string name="str_connect">Connect</string>
    <string name="str_key_passphrase">Private key passphrase</string>
    <string name="str_import">Import</string>
    <string name="str_incorrect_password">Incorrect password</string>
    <string name="str_failed_to_connect">Failed to connect</string>

    <string name="pref_title_dns">Enable DNS Forwarding</string>
    <string name="pref_title_dns_server">DNS Server (default: 8.8.8.8)</string>
    <string name="pref_default_dns_server">8.8.8.8</string>

    <string name="pref_title_forwarding_section">Forwarding options</string>
    <string name="pref_forward">Port Forwarding</string>
    <string name="forward_src_port">Src Port</string>
    <string name="forward_dest_host">Destination Host</string>
    <string name="forward_dest_port">Dst Port</string>
    <string name="forward_local">Local</string>
    <string name="forward_remote">Remote</string>

    <string name="pref_all_traffic">Send all traffic over VPN</string>
    <string name="pref_specific_routes">Route specific subnets</string>

    <string name="pref_title_verify_internet">Verify internet connectivity</string>
    <string name="pref_summary_verify_internet">Connecting to a HTTP server</string>
    <string name="pref_default_verify_host">http://google.com</string>
    <string name="pref_title_verify_host">Connectivity check server</string>

    <string name="route_text">Route (e.g. 0.0.0.0)</string>
    <string name="route_prefix_text">Prefix length</string>

    <string name="refresh_log">Refresh</string>
    <string name="copy_log">Copy</string>
    <string name="email_log">Send e-mail</string>

    <string name="add_widget">Add widget</string>

    <string name="profile">Profile</string>
    <string-array name="profiles">
        <item>Profile 1</item>
        <item>Profile 2</item>
        <item>Profile 3</item>
        <item>Profile 4</item>
        <item>Profile 5</item>
    </string-array>

    <string-array name="profiles_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="pref_title_autoconnect">Auto Connect</string>
    <string name="pref_summary_autoconnect">Start automatically when WiFi is available</string>
</resources>
